--- a/.github/workflows/publish_website_to_aws.yml
+++ b/.github/workflows/publish_website_to_aws.yml
@@ -2,7 +2,7 @@ name: Deploy Website to AWS
 
 on:
   pull_request:
-    types: [pull_request]
+    types: [opened, synchronize, reopened]
   push:
     branches:
       - master
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
+      id-token: write    # Required for OIDC role assumption
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -32,7 +32,8 @@ jobs:
       - name: Build the website
         run: gulp web
 
-      - name: Configure AWS credentials
+      - name: Configure AWS credentials (Pull Request)
+        if: github.event_name == 'pull_request'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -56,6 +57,14 @@ jobs:
               repo: context.repo.repo,
               body: url
             });
+
+      - name: Configure AWS Credentials (Production)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/github-actions-role
+          aws-region: us-east-1
+          role-session-name: GitHubActionsSession
 
       - name: Deploy to S3 (Production)
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
