--- a/.github/workflows/publish_website_to_aws.yml
+++ b/.github/workflows/publish_website_to_aws.yml
@@ -64,7 +64,7 @@ jobs:
         # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}
+          role-to-assume: arn:aws:iam::${{ vars.AWS_PROD_ACCOUNT_ID }}
           aws-region: us-east-1
           role-session-name: GitHubActionsSession
 
