--- a/.github/workflows/publish_website_to_aws.yml
+++ b/.github/workflows/publish_website_to_aws.yml
@@ -64,18 +64,18 @@ jobs:
         # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ vars.AWS_PROD_ACCOUNT_ID }}
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_PROD_ACCOUNT_ID }}
           aws-region: us-east-1
           role-session-name: GitHubActionsSession
 
       - name: Deploy to Production
         # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          aws s3 sync build/gh-pages/ s3://${{ vars.AWS_PRODUCTION_BUCKET_NAME }}/ --acl public-read
+          aws s3 sync build/gh-pages/ s3://${{ secrets.AWS_PRODUCTION_BUCKET_CDN }}/pdfjs/ --acl public-read
 
-      - name: Update environment secret with production URL
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: |
-          gh secret set PRODUCTION_URL -b "{{vars.AWS_PROD_URL}}"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Update environment secret with production URL
+      #   if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+      #   run: |
+      #     gh secret set PRODUCTION_URL -b "{{secrets.AWS_PROD_URL}}"
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
