--- a/.github/workflows/publish_website_to_aws.yml
+++ b/.github/workflows/publish_website_to_aws.yml
@@ -59,7 +59,7 @@ jobs:
               body: `Preview your deployment: [View Here](${url})`
             });
 
-      - name: Configure AWS credentials (Production)
+      - name: Configure AWS credentials Production
         # if: github.event_name == 'pull_request'
         # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: aws-actions/configure-aws-credentials@v4
